# WeserGamesEngine

./: .gitattributes  .gitignore  CMakeFilters.cmake  CMakeLists.txt  CMakeLists.txt.bak  WeserGamesEngine.sln  conanfile.txt
Lib/: GenericCodeGen.lib  GenericCodeGend.lib  HLSL.lib  HLSLd.lib  MachineIndependent.lib  MachineIndependentd.lib  OGLCompiler.lib  OGLCompilerd.lib  OSDependent.lib  OSDependentd.lib  OpenAL32.lib  OpenGL32.Lib  SDL2-static.lib  SDL2_test.lib  SDL2main.lib  SPIRV-Tools-diff.lib  SPIRV-Tools-diffd.lib  SPIRV-Tools-link.lib  SPIRV-Tools-linkd.lib  SPIRV-Tools-lint.lib  SPIRV-Tools-lintd.lib  SPIRV-Tools-opt.lib  SPIRV-Tools-optd.lib  SPIRV-Tools-reduce.lib  SPIRV-Tools-reduced.lib  SPIRV-Tools-sharedd.lib  SPIRV-Tools.lib  SPIRV-Toolsd.lib  SPIRV.lib  SPIRVd.lib  SPVRemapper.lib  SPVRemapperd.lib  glslang-default-resource-limits.lib  glslang-default-resource-limitsd.lib  glslang.lib  glslangd.lib  ode_double.lib  shaderc.lib  shaderc_combined.lib  shaderc_combinedd.lib  (+22 more)
WeserGamesEngine/: AppSettings.cpp  AppSettings.h  Console.cpp  Console.h  DirectXRenderer.cpp  DirectXRenderer.h  Display.cpp  Display.h  Event.cpp  Event.h  EventCallback.h  GLFWDisplay.cpp  GLFWDisplay.h  OpenGLRenderer.cpp  OpenGLRenderer.h  PropertySheet.props  RendereringFramework.h  Resource.cpp  Resource.h  ResourceMemory.cpp  ResourceMemory.h  Sprite.cpp  Sprite.h  T_Material.cpp  T_Material.h  T_Matrix.cpp  T_Matrix.h  T_Resolution.cpp  T_Resolution.h  T_Resource.cpp  T_Resource.h  T_Sprite.cpp  T_Sprite.h  T_Vector2.cpp  T_Vector2.h  T_Vector3.cpp  T_Vector3.h  T_Version.cpp  T_Version.h  Time.cpp  (+13 more)
